set up icons in card

--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
                 <h2>New Project</h2>
                 <div class="input-list">
                     <div class="form-flield-container">
-                        <label>Name</label>
+                        <label>
+                            <span class="material-symbols-outlined">stylus_note</span>  
+                            Name</label>
                         <input type="text">
                     </div>
                     <div class="form-flield-container">
-                        <label>Discription</label>
+                        <label>
+                            <span class="material-symbols-outlined">menu</span>
+                            Discription</label>
                         <textarea cols="30" rows="5" placeholder="Please discribe your project."></textarea>
                     </div>
                     <div class="form-flield-container">
-                        <label>Role</label>
+                        <label>
+                            <span class="material-symbols-outlined">account_box</span>
+                            Role</label>
                         <select>
                             <option>Architect</option>
                             <option>Engineer</option>
@@ -45,7 +51,9 @@
                         </select>
                     </div>
                     <div class="form-flield-container">
-                        <label>Status</label>
+                        <label>
+                            <span class="material-symbols-outlined">check_circle</span>
+                            Status</label>
                         <select>
                             <option>Pending</option>
                             <option>Active</option>
